# lhslib

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  README.md  SECURITY.md  appveyor.yml  index.html  params.json
.github/workflows/: cmake.yml  codeql-analysis.yml  cpplint.yml
docs/html/: _c_random_8h.html  _c_random_8h_source.html  _common_defines_8h.html  _common_defines_8h_source.html  _l_h_s_common_defines_8h.html  _l_h_s_common_defines_8h_source.html  _r_standard_uniform_8h.html  _r_standard_uniform_8h_source.html  _test_class_8h.html  _test_class_8h_source.html  annotated.html  annotated_dup.js  class_r_standard_uniform.html  classbclib_1_1_c_random-members.html  classbclib_1_1_c_random.html  classbclib_1_1_c_random_standard_uniform-members.html  classbclib_1_1_c_random_standard_uniform.html  classbclib_1_1_test_class-members.html  classbclib_1_1_test_class.html  classbclib_1_1assertion__error-members.html  classbclib_1_1assertion__error.html  classbclib_1_1matrix-members.html  classbclib_1_1matrix.html  classbclib_1_1matrix_const_iter-members.html  classbclib_1_1matrix_const_iter.html  classbclib_1_1matrix_iter-members.html  classbclib_1_1matrix_iter.html  classes.html  classlhs__r_1_1_r_standard_uniform-members.html  classlhs__r_1_1_r_standard_uniform.html  classlhs_test_1_1genetic_l_h_s___r_test-members.html  classlhs_test_1_1genetic_l_h_s___r_test.html  classlhs_test_1_1genetic_l_h_s___r_test.js  classlhs_test_1_1improved_l_h_s___r_test-members.html  classlhs_test_1_1improved_l_h_s___r_test.html  classlhs_test_1_1improved_l_h_s___r_test.js  classlhs_test_1_1maximin_l_h_s___r_test-members.html  classlhs_test_1_1maximin_l_h_s___r_test.html  classlhs_test_1_1maximin_l_h_s___r_test.js  classlhs_test_1_1opt_seeded_l_h_s___r_test-members.html  (+97 more)
doxygen/html/: _c_random_8cpp.html  _r_standard_uniform_8h.html  _r_standard_uniform_8h_source.html  annotated.html  classbclib_1_1_test_class-members.html  classbclib_1_1_test_class.html  classbclib_1_1assertion__error.html  classes.html  classlhs__r_1_1_r_standard_uniform.html  classlhs_test_1_1improved_l_h_s___r_test-members.html  (+31 more)
lhs_nb/: CMakeLists.txt  RVariables.cmake  cmakeshell.bat  deploylhs.bat  documentWithDoxygen.bat  doxygen.config
lhs_nb/doxygen/html/: _c_random_8cpp.html  _c_random_8h.html  _c_random_8h_source.html  _common_defines_8h.html  _common_defines_8h_source.html  _test_class_8h.html  _test_class_8h_source.html  annotated.html  class_r_standard_uniform-members.html  classbclib_1_1_test_class-members.html  classbclib_1_1assertion__error-members.html  classbclib_1_1assertion__error.html  classbclib_1_1matrix-members.html  classbclib_1_1matrix.html  classbclib_1_1matrix_iter-members.html  classes.html  classlhs__r_1_1_r_standard_uniform-members.html  classlhs_test_1_1improved_l_h_s___r_test.html  classlhs_test_1_1maximin_l_h_s___r_test-members.html  classlhs_test_1_1opt_seeded_l_h_s___r_test-members.html  classlhs_test_1_1optimum_l_h_s___r_test-members.html  classlhs_test_1_1optimum_l_h_s___r_test.html  classlhs_test_1_1random_l_h_s___r_test-members.html  classlhs_test_1_1random_l_h_s___r_test.html  classlhs_test_1_1utility_l_h_s_test.html  classlhslib_1_1_c_random-members.html  classlhslib_1_1_c_random.html  classlhslib_1_1_c_random_standard_uniform-members.html  dir_69822bb73cf131025c0888868b4f9244.html  dir_a9a5e4b358f42921d58a8459434287a1.html  dir_d67a6f005fe75a80c7554625da8142fe.html  dir_df523aeceac81ec66942450b0291b6fa.html  files.html  functions.html  functions_func.html  functions_type.html  globals_func.html  improved_l_h_s___r_test_8cpp.html  improved_l_h_s___r_test_8h.html  improved_l_h_s___r_test_8h_source.html  (+36 more)
lhs_nb/doxygen/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_67.js  all_69.js  all_6d.js  all_6f.js  all_73.js  all_74.js  all_7e.js  classes_61.js  classes_69.js  classes_6f.js  defines_65.js  files_67.js  files_69.js  files_6d.js  files_72.js  files_73.js  functions_61.js  functions_63.js  functions_67.js  functions_69.js  functions_6f.js  functions_72.js  functions_74.js  namespaces_6c.js
lhs_nb/lhs_r/: lhs_r.cpp  lhs_r.h  lhs_r_utilities.cpp  lhs_r_utilities.h
lhs_nb/lhs_r/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
lhs_nb/lhslib/: CMakeLists.txt  CRandom.h  CommonDefines.h  defines.h  geneticLHS.cpp  improvedLHS.cpp  improvedLHS_R.cpp  maximinLHS.cpp  maximinLHS_R.cpp  optSeededLHS.cpp  optSeededLHS_R.cpp  optimumLHS.cpp  optimumLHS_R.cpp  simpleMatrix.h  utilityLHS.cpp  utilityLHS.h  utilityLHS_R.cpp  utilityLHS_R.h
lhs_nb/lhslib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
lhs_nb/lhstest/: CMakeLists.txt  TestClass.cpp  TestClass.h  geneticLHS_RTest.cpp  geneticLHS_RTest.h  improvedLHS_RTest.cpp  improvedLHS_RTest.h  main.cpp  maximinLHS_RTest.cpp  maximinLHS_RTest.h  optSeededLHS_RTest.cpp  optSeededLHS_RTest.h  optimumLHS_RTest.cpp  optimumLHS_RTest.h  randomLHS_RTest.cpp  simpleMatrixTest.cpp  simpleMatrixTest.h  utilityLHS_RTest.cpp  utilityLHS_RTest.h
lhs_nb/lhstest/nbproject/: Makefile-Debug.mk  Makefile-Profile.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Profile.bash  Package-Release.bash  configurations.xml  project.xml
src/: CMakeLists.txt  cmakeshell.bat  cmakeshell.sh  documentWithDoxygen.sh  doxygen.config
src/lhs_r/: CMakeLists.txt
src/lhslib/: CMakeLists.txt  LHSCommonDefines.h  geneticLHS.cpp  improvedLHS.cpp  lhslibVersion.h.in  maximinLHS.cpp  optSeededLHS.cpp  optimumLHS.cpp  randomLHS.cpp  utilityLHS.h
src/lhstest/: CMakeLists.txt  geneticLHS_RTest.cpp  geneticLHS_RTest.h  improvedLHS_RTest.cpp  improvedLHS_RTest.h  main.cpp  maximinLHS_RTest.cpp  maximinLHS_RTest.h  optSeededLHS_RTest.cpp  optSeededLHS_RTest.h  optimumLHS_RTest.cpp  optimumLHS_RTest.h  randomLHS_RTest.cpp  randomLHS_RTest.h  utilityLHS_RTest.cpp  utilityLHS_RTest.h
(+91 files in other folders)
